[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Enemigos/spr_enemigo_prueba.png" type="Texture" id=1]
[ext_resource path="res://Scripts/BossFinal/BossFinalEstadoMoving1.gd" type="Script" id=2]
[ext_resource path="res://Scripts/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://Scripts/BossFinal/BossFinalEstadoStart.gd" type="Script" id=4]
[ext_resource path="res://Scripts/BossFinal/BossFinalEstadoMoving2.gd" type="Script" id=5]
[ext_resource path="res://Scripts/BossFinal/BossFinalEstadoMoving3.gd" type="Script" id=6]
[ext_resource path="res://Scripts/BossFinal/BossFinalEstadoMoving3Idle.gd" type="Script" id=7]
[ext_resource path="res://Objects/Enemigos/Proyectiles/ProyectilEnemigoSpreadDisparador.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objects/Enemigos/Proyectiles/ProyectilEnemigoTargetJugador.tscn" type="PackedScene" id=9]
[ext_resource path="res://Objects/Enemigos/Proyectiles/ProyectilEnemigoLineaRecta.tscn" type="PackedScene" id=10]
[ext_resource path="res://Objects/Enemigos/Proyectiles/ProyectilEnemigoLaser.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/BossFinal/BossFinalControl.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.3588, 11.4726 )

[node name="BossFinal" type="Area2D"]
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Start" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Moving1" type="Node" parent="StateMachine"]
script = ExtResource( 2 )
proyectil = ExtResource( 11 )

[node name="Moving2" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
proyectil = ExtResource( 10 )

[node name="Moving3" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
proyectil = ExtResource( 9 )

[node name="Moving3Idle" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
proyectil = ExtResource( 8 )
